<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="view_all">view all</string>
    <string name="select_category">Select Category</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="new_sale">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>
    <string name="price_with_dollar">$%d</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="default_navigation">Zihuatanejo, Gro</string>
    <string name="search">Search</string>
    <string name="explorer">Explorer</string>

    <string-array name="brands">
        <item>Samsung</item>
        <item>IPhone</item>
        <item>Huawei</item>
    </string-array>

    <string-array name="prices">
        <item>$0-$300</item>
        <item>$300-$500</item>
        <item>$500-$10000</item>
    </string-array>

    <string-array name="sizes">
        <item>less than 3.4 inches</item>
        <item>3.5 to 4.9 inches</item>
        <item>5.0 to 5.4 inches</item>
        <item>5.4 to 5.9 inches</item>
        <item>6.0 to 6.4 inches</item>
        <item>over 6.5 inches</item>
    </string-array>
</resources>